--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 #background
 {
-	background-color: #022A5C;
+	background-color: #282828;
 }
 
 .center
@@ -10,6 +10,42 @@
 
 .room-image
 {
-	width: 100px;
-	height: 100px;
+	width: 20px;
+	height: 20px;
 }
+
+.nav-item
+{
+	color: white;
+	font-size: 12px;
+}
+
+#menu-outer
+{
+	height: 84px;
+	background: url(images/bar-bg.jpg) repeat-x;
+}
+
+.table
+{
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+
+ul#horizontal-list
+{
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+}
+	ul#horizontal-list li
+{
+	display: inline;
+}
+
+#logo
+{
+	width: 200px;
+	height: auto;
+}
+
