--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,10 @@
+/************************Backgorund*/
 #background
 {
 	background-color: #282828;
 }
 
-.center
-{
-	align-items: center;
-}
-
+/************************NavBar*/
 .room-image
 {
 	width: 20px;
@@ -48,4 +45,90 @@ ul#horizontal-list
 	width: 200px;
 	height: auto;
 }
+
+/************************Form*/
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/*Main Container*/
+.main-container
+{
+	background-color: lightsteelblue;
+}
+
+.content
+{
+	color: white;
+}
+
+p
+{
+	font-size: 10px;
+	text-align: center;
+}
+
+input
+{
+	align-items: center;
+}
+
+.add-image
+{
+	text-align: right;
+}
+
+
+
+
+
+
+
 
