--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,26 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+/*Button Tool Bar and Poperty ID*/
+.jumbotron
+{
+	background-color: skyblue;
+	border-radius: 0px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.sample-property-img
+{
+	width: 200px;
+	height: auto;
+}
+
+#property-id
+{
+	color: white;
+}
+
 /*Main Container*/
 .main-container
 {
